--- a/resume.html
+++ b/resume.html
@@ -41,12 +41,13 @@
     <a href="index.html" class="back-link">← Back</a>
     <h1 class="resume-name">Nicholas Trimble</h1>
   <p class="resume-title">Software Engineer</p>
+  
   </header>
 
 
   <main class="pdf-wrapper">
-  <embed src="resume.pdf" type="application/pdf">
-  <p>If the resume does not display, <a href="resume.pdf" target="_blank" rel="noopener">click here to open it</a>.</p>
+  <embed src="Nick's Resume.pdf" type="application/pdf">
+  <p>If the resume does not display, <a href="Nick's Resume.pdf" target="_blank" rel="noopener">click here to open it</a>.</p>
 </main>
 </body>
 </html>
